# aa-forum

./: .coveragerc  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .transifex.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  _MANIFEST.in  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: automated-checks.yml  pypi-release.yml  release.yml  tests.yml
.make/conf.d/: django-esi.mk  django.mk
aa_forum/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  forms.py  helpers.py  managers.py  models.py  providers.py  signals.py  tasks.py  urls.py
aa_forum/aadiscordbot/cogs/: __init__.py  aa_forum.py
aa_forum/helper/: discord_messages.py  eve_images.py  forms.py  pagination.py  static_files.py  text.py  urls.py  user.py  webhook.py
aa_forum/locale/: django.pot
aa_forum/locale/cs/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/de/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/en/LC_MESSAGES/: django.po
aa_forum/locale/es/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/it_IT/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/ja/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/ko/LC_MESSAGES/: django.po
aa_forum/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/nl/LC_MESSAGES/: django.po
aa_forum/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/ru/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/sk/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/uk/LC_MESSAGES/: django.mo  django.po
aa_forum/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
aa_forum/migrations/: 0001_initial.py  0002_auto_20210603_0727.py  0002_default_settings.py  0002_personalmessages.py  0002_reserved_slugs.py  0002_reserved_slugs.py.x  0002_settings.py  0003_add_default_settings.py  0003_alter_categories_slug.py  0003_board_discord_webhook.py  0003_default_settings.py  0003_reserved_slugs.py  0004_auto_20210603_0746.py  0004_auto_20210618_1204.py  0004_board_use_webhook_for_replies.py  0004_default_settings.py  0004_message_plaintext_field.py  0004_singular_model_names.py  0004_topic_new_feature.py  0005_announcement_boards.py  0005_auto_20210603_1451.py  0005_auto_20210619_1247.py  0005_fix_message_field.py  0005_remove_board_from_message.py  0006_add_indices.py  0006_alter_boards_groups.py  0006_auto_20210619_1706.py  0006_reset_default_settings.py  0007_add_first_and_last_message_shortcuts.py  0007_auto_20210619_1711.py  0007_change_settings_to_singleton.py  0007_topics_read_by.py  0008_auto_20210604_0849.py  0008_auto_20210619_1715.py  0008_migrate_to_add_now.py  0008_populate_default_settings.py  0009_add_related_names.py  0009_remove_topic_last_message_seen.py  0009_topics_time_modified.py  0009_various_model_improvements.py  (+20 more)
aa_forum/providers/: applogger.py
aa_forum/scripts/: __init__.py  drop_tables.sql  fake_messages.py
aa_forum/search/stopwords/: stopwords-cs.json  stopwords-de.json  stopwords-en.json  stopwords-es.json  stopwords-fr.json  stopwords-it.json  stopwords-ja.json  stopwords-ko.json  stopwords-nl.json  stopwords-pl.json  stopwords-ru.json  stopwords-sk.json  stopwords-uk.json  stopwords-zh.json
aa_forum/static/aa_forum/css/: aa-bootstrap-fix.css  aa-bootstrap-fix.min.css  aa-forum.css  aa-forum.min.css  aa-forum.min.css.map
aa_forum/static/aa_forum/javascript/: aa-forum-admin.js  aa-forum-admin.min.js  aa-forum-admin.min.js.map  aa-forum-bootstrap.js  aa-forum-bootstrap.min.js  aa-forum-bootstrap.min.js.map  aa-forum-ckeditor.js  aa-forum-ckeditor.min.js  aa-forum-ckeditor.min.js.map  aa-forum-dashboard-widgets.js  aa-forum-dashboard-widgets.min.js  aa-forum-dashboard-widgets.min.js.map  aa-forum-desktop-widgets.js  aa-forum-desktop-widgets.min.js  aa-forum-desktop-widgets.min.js.map  aa-forum-oembed.js  aa-forum-oembed.min.js  aa-forum-oembed.min.js.map  aa-forum-personal-messages.js  aa-forum-personal-messages.min.js  aa-forum-personal-messages.min.js.map  aa-forum.js  aa-forum.min.js  aa-forum.min.js.map
aa_forum/templates/aa_forum/: base.html
aa_forum/templates/aa_forum/ajax-render/personal-message/: message.html
aa_forum/templates/aa_forum/ajax-render/personal-messages/: message.html
aa_forum/templates/aa_forum/bundles/: aa-forum-admin-js.html  aa-forum-bootstrap-js.html  aa-forum-ckeditor-js.html  aa-forum-css.html  aa-forum-dashboard-widgets-js.html  aa-forum-js.html  aa-forum-oembed-js.html  aa-forum-personal-messages-js.html  ckeditor-js.html  ckeditor5-css.html  ckeditor5-js.html  select2-bootstrap-theme-css.html  select2-css.html  select2-js.html  sumoselect-css.html  sumoselect-js.html
aa_forum/templates/aa_forum/partials/: breadcrumb.html  menu.html
aa_forum/templates/aa_forum/partials/forum/: forum-index.html  (+2 more)
aa_forum/templatetags/: aa_forum.py  aa_forum_datetime.py  aa_forum_search.py  aa_forum_template_variables.py  aa_forum_user.py  aa_forum_versioned_static.py
aa_forum/tests/: __init__.py  factories.py  test_admin.py  test_app_settings.py  test_auth_hooks.py  test_dhooks_lite.py  test_forms.py  test_helper_discord_messages.py  test_helper_urls.py  test_helpers.py  test_integration.py  test_managers.py  test_models.py  test_providers.py  test_signals.py  test_templatetags.py  test_views.py  test_views_admin.py  test_views_forum.py  test_views_widgets.py  utils.py
aa_forum/urls/: __init__.py  forum.py  internal.py
aa_forum/views/: __init__.py  admin.py  administration.py  forum.py  messages.py  personal_messages.py  profile.py  search.py  widgets.py
locale/: it_IT.json  ja.json  ru.json
testauth/: celery.py  local.py  settings.py  settings_aa3x.py  urls.py
testauth/settings/: base.py  local.py
(+142 files in other folders)
