[metadata]
name = aa_forum
version = attr: aa_forum.__version__
description = Simple forum for Alliance Auth
long_description = file: README.md
long_description_content_type = text/markdown
author = Peter Pfeufer
author_email = develop@ppfeufer.de
maintainer = Peter Pfeufer
maintainer_email = develop@ppfeufer.de
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/ppfeufer/aa-forum
keywords =
    allianceauth
    eveonline
    forum
project_urls =
    Issue / Bug Reports = https://github.com/ppfeufer/aa-forum/issues
    Changelog = https://github.com/ppfeufer/aa-forum/blob/master/CHANGELOG.md

[options]
packages = find_namespace:
install_requires =
    allianceauth>=2.15.1
    allianceauth-app-utils>=1.12.0
    dhooks-lite>=0.6.1
    django-ckeditor>=6.4.2
    django-ckeditor-youtube-plugin>=0.0.1
    unidecode>=1.3.3
python_requires = ~=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
include = aa_forum*

[options.package_data]
* = *
